--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
    <!-- Sidebar -->
    <div class="sidebar">
     <!-- Sidebar user panel (optional) -->
-  
+
 
     <!-- SidebarSearch Form -->
     <div class="form-inline">
@@ -29,7 +29,7 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a routerLink="add-user" class="nav-link">
+                  <a routerLink="list-client" class="nav-link">
                     <i class="fas fa-plus nav-icon"></i>
                     <p>Client</p>
                   </a>
@@ -37,7 +37,7 @@
               </ul>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a routerLink="add-user" class="nav-link">
+                  <a routerLink="list-admin" class="nav-link">
                     <i class="fas fa-lock nav-icon"></i>
                     <p>Admin</p>
                   </a>
@@ -45,32 +45,40 @@
               </ul>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a routerLink="add-user" class="nav-link">
+                  <a routerLink="list-supplier" class="nav-link">
                     <i class="fas fa-parachute-box nav-icon"></i>
                     <p>Supplier</p>
                   </a>
                 </li>
               </ul>
+               <ul class="nav nav-treeview">
+                 <li class="nav-item">
+                   <a routerLink="list-deliverer" class="nav-link">
+                     <i class="fas fa-person-dolly nav-icon"></i>
+                     <p>Deliverer</p>
+                   </a>
+                 </li>
+               </ul>
             </li>
-            
-            
+
+
         <li class="nav-item">
-          
+
           <a routerLink="Product" class="nav-link" >
             <i class="nav-icon fas fa-cube"></i>
             <p>
               Products
-          
+
             </p>
           </a>
-        
+
         </li>
         <li class="nav-item">
           <a routerLink="category-list"class="nav-link ">
             <i class="nav-icon fas fa-th"></i>
             <p>
               Category
-        
+
             </p>
           </a>
         </li>
@@ -79,10 +87,10 @@
             <i class="nav-icon fas fa-cube"></i>
             <p>
               Shops
-          
+
             </p>
           </a>
-        
+
         </li>
             <li class="nav-item">
           <a routerLink="list-blog" class="nav-link">
@@ -132,7 +140,7 @@
             </p>
           </a>
         </li>
-    
+
         <li class="nav-item">
           <a routerLink="list-promocode" class="nav-link">
             <i class="nav-icon fas fa-gift"></i>
@@ -149,7 +157,7 @@
             </p>
           </a>
         </li>
-      
+
         <li class="nav-item">
           <a routerLink="list-purchaseOrder" class="nav-link">
             <i class="nav-icon fas fa-box-open"></i>
@@ -167,9 +175,9 @@
             </p>
           </a>
         </li>
-     
-        
-        
+
+
+
       </ul>
     </nav>
     <!-- /.sidebar-menu -->
