--- a/src/app/component/Admin/edit-admin/edit-admin.component.html
+++ b/src/app/component/Admin/edit-admin/edit-admin.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Edit Supplier</h2>
+  <h2>Edit Admin</h2>
   <form  (ngSubmit)="onSubmitForm()">
     <div class="form-group">
       <label for="firstName">First Name:</label>
