--- a/src/app/component/User/edit-user/edit-user.component.html
+++ b/src/app/component/User/edit-user/edit-user.component.html
@@ -1,1 +1,31 @@
-<p>edit-user works!</p>
+<div class="container">
+  <h2>Edit User</h2>
+  <form [formGroup]="userForm" (ngSubmit)="onSubmitForm()">
+    <div class="form-group">
+      <label for="firstName">First Name:</label>
+      <input type="text" class="form-control" id="firstName" formControlName="firstName" name="firstName" [(ngModel)]="user.firstName">
+    </div>
+    <div class="form-group">
+      <label for="lastName">Last Name:</label>
+      <input type="text" class="form-control" id="lastName" formControlName="lastName" name="lastName" [(ngModel)]="user.lastName">
+    </div>
+    <div class="form-group">
+      <label for="phoneNumber">Phone Number:</label>
+      <input type="text" class="form-control" id="phoneNumber" formControlName="phoneNumber" name="phoneNumber" [(ngModel)]="user.phoneNumber">
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="text" class="form-control" formControlName="email" id="email" [(ngModel)]="user.email">
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="text" class="form-control" id="password" formControlName="password" [(ngModel)]="user.password">
+    </div>
+    <div class="form-group">
+      <label for="confirmPassword">Reset Password:</label>
+      <input type="text" class="form-control" id="confirmPassword" formControlName="confirmPassword">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+    <button  (click)="onCancel()" class="btn btn-danger">Cancel</button>
+  </form>
+</div>
