--- a/src/app/component/client/edit-client/edit-client.component.html
+++ b/src/app/component/client/edit-client/edit-client.component.html
@@ -1,1 +1,37 @@
-<p>edit-client works!</p>
+<div class="container">
+  <h2>Edit Client</h2>
+  <form  [formGroup]="ClientForm" (ngSubmit)="onSubmitForm()">
+    <div class="form-group">
+      <label for="firstName">First Name:</label>
+      <input type="text" class="form-control" id="firstName" formControlName="firstName">
+
+    </div>
+    <div class="form-group">
+      <label for="lastName">Last Name:</label>
+      <input type="text" class="form-control" id="lastName" formControlName="lastName">
+
+    </div>
+    <div class="form-group">
+      <label for="phoneNumber">Phone Number:</label>
+      <input type="text" class="form-control" id="phoneNumber" formControlName="phoneNumber">
+
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="text" class="form-control" formControlName="email" id="email">
+
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="text" class="form-control" id="password" formControlName="password">
+
+    </div>
+    <div class="form-group">
+      <label for="confirmPassword">Reset Password:</label>
+      <input type="text" class="form-control" id="confirmPassword" formControlName="confirmPassword">
+
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+    <button (click)="onCancel()" class="btn btn-danger">Cancel</button>
+  </form>
+</div>
