--- a/src/app/component/client/list-client/list-client.component.html
+++ b/src/app/component/client/list-client/list-client.component.html
@@ -1,1 +1,25 @@
-<p>list-client works!</p>
+<div class="container">
+  <h2>List of Clients</h2>
+  <button class="btn btn-primary float-right" routerLink="/add-client">Add Client</button>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let client of clients">
+      <td>{{ client.id }}</td>
+      <td>{{ client.firstName }}</td>
+      <td>{{ client.email }}</td>
+      <td>
+        <button class="btn btn-danger" (click)="deleteUser(client.id)">Delete</button>
+        <button class="btn btn-primary" (click)="updateClient(client.id)">Edit</button>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
