--- a/src/app/component/client/add-client/add-client.component.html
+++ b/src/app/component/client/add-client/add-client.component.html
@@ -1,57 +1,29 @@
 <div class="container">
   <h2>Add Client</h2>
-  <form (ngSubmit)="onSubmitForm()">
+  <form [formGroup]="clientForm"  (ngSubmit)="onSubmitForm()">
     <div class="form-group">
       <label for="firstName">First Name:</label>
       <input type="text" class="form-control" id="firstName" formControlName="firstName">
-      <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)" class="alert alert-danger">
-        <div *ngIf="firstName.errors?.['required']">First Name is required.</div>
-        <div *ngIf="firstName.errors?.['minlength']">First Name must be at least 4 characters long.</div>
-        <div *ngIf="firstName.errors?.['maxlength']">First Name cannot be more than 20 characters long.</div>
-      </div>
     </div>
     <div class="form-group">
       <label for="lastName">Last Name:</label>
       <input type="text" class="form-control" id="lastName" formControlName="lastName">
-      <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)" class="alert alert-danger">
-        <div *ngIf="lastName.errors?.['required']">Last Name is required.</div>
-        <div *ngIf="lastName.errors?.['minlength']">Last Name must be at least 4 characters long.</div>
-        <div *ngIf="lastName.errors?.['maxlength']">Last Name cannot be more than 20 characters long.</div>
-      </div>
     </div>
     <div class="form-group">
       <label for="phoneNumber">Phone Number:</label>
       <input type="text" class="form-control" id="phoneNumber" formControlName="phoneNumber">
-      <div *ngIf="phoneNumber.invalid && (phoneNumber.dirty || phoneNumber.touched)" class="alert alert-danger">
-        <div *ngIf="password.errors?.['required']">phoneNumber is required.</div>
-        <div *ngIf="password.errors?.['pattern']">phoneNumber must be only numbers.</div>
-      </div>
     </div>
     <div class="form-group">
       <label for="email">Email:</label>
       <input type="text" class="form-control" formControlName="email" id="email">
-      <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
-        <div *ngIf="lastName.errors?.['required']">Email is required.</div>
-        <div *ngIf="lastName.errors?.['email']">Email is not in the correct Form.</div>
-      </div>
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
       <input type="text" class="form-control" id="password" formControlName="password">
-      <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
-        <div *ngIf="password.errors?.['required']">Password is required.</div>
-        <div *ngIf="password.errors?.['minlength']">Password must be at least 4 characters long.</div>
-        <div *ngIf="password.errors?.['maxlength']">Password cannot be more than 20 characters long.</div>
-      </div>
     </div>
     <div class="form-group">
       <label for="confirmPassword">Reset Password:</label>
       <input type="text" class="form-control" id="confirmPassword" formControlName="confirmPassword">
-      <div *ngIf="confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched)" class="alert alert-danger">
-        <div *ngIf="confirmPassword.errors?.['required']">Password is required.</div>
-        <div *ngIf="confirmPassword.errors?.['matchingPasswordsValidator']">Last Name cannot be more than 20 characters long.</div>
-        <div *ngIf="confirmPassword.errors?.['minlength']">Last Name must be at least 4 characters long.</div>
-      </div>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
     <button  (click)="onCancel()" class="btn btn-danger">Cancel</button>
