--- a/src/app/component/Admin/list-admin/list-admin.component.html
+++ b/src/app/component/Admin/list-admin/list-admin.component.html
@@ -17,6 +17,7 @@
       <td>{{ admin.email }}</td>
       <td>
         <button class="btn btn-danger" (click)="deleteAdmin(admin.id)">Delete</button>
+        <button class="btn btn-primary" (click)="updateAdmin(admin.id)">Edit</button>
       </td>
     </tr>
     </tbody>
