--- a/src/app/component/Deliverer/list-deliverer/list-deliverer.component.html
+++ b/src/app/component/Deliverer/list-deliverer/list-deliverer.component.html
@@ -17,6 +17,7 @@
       <td>{{ deliverer.email }}</td>
       <td>
         <button class="btn btn-danger" (click)="deleteDeliverer(deliverer.id)">Delete</button>
+        <button class="btn btn-primary" (click)="updateDeliverer(deliverer.id)">Edit</button>
       </td>
     </tr>
     </tbody>
