--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -54,7 +54,7 @@
                <ul class="nav nav-treeview">
                  <li class="nav-item">
                    <a routerLink="list-deliverer" class="nav-link">
-                     <i class="fas fa-person-dolly nav-icon"></i>
+                     <i class="fas fa-parachute-box nav-icon"></i>
                      <p>Deliverer</p>
                    </a>
                  </li>
