--- a/src/app/component/Supplier/lis-supplier/lis-supplier.component.html
+++ b/src/app/component/Supplier/lis-supplier/lis-supplier.component.html
@@ -17,6 +17,7 @@
       <td>{{ supplier.email }}</td>
       <td>
         <button class="btn btn-danger" (click)="deleteSupplier(supplier.id)">Delete</button>
+        <button class="btn btn-primary" (click)="updateSupplier(supplier.id)">Edit</button>
       </td>
     </tr>
     </tbody>
