--- a/src/app/component/Deliverer/list-deliverer/list-deliverer.component.html
+++ b/src/app/component/Deliverer/list-deliverer/list-deliverer.component.html
@@ -1,25 +1,39 @@
-<div class="container">
-  <h2>List of Deliverers</h2>
-  <button class="btn btn-primary float-right" routerLink="/add-deliverer">Add Deliverer</button>
-  <table class="table">
-    <thead>
-    <tr>
-      <th>Id</th>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let deliverer of deliverers">
-      <td>{{ deliverer.id }}</td>
-      <td>{{ deliverer.firstName }}</td>
-      <td>{{ deliverer.email }}</td>
-      <td>
-        <button class="btn btn-danger" (click)="deleteDeliverer(deliverer.id)">Delete</button>
-        <button class="btn btn-primary" (click)="updateDeliverer(deliverer.id)">Edit</button>
-      </td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+<section class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-header">
+            <h2 >Deliverers List</h2>
+            <button class="btn btn-primary float-right" routerLink="/add-deliverer">Add Deliverer</button>
+          </div>
+          <div class="card-body">
+            <table class="table table-bordered table-striped">
+              <thead>
+              <tr>
+                <th>ID</th>
+                <th>Full Name</th>
+                <th>Email</th>
+                <th>Phone Number</th>
+                <th>Actions</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let deliverer of deliverers">
+                <td>{{ deliverer.id }}</td>
+                <td>{{ deliverer.firstName }} {{ deliverer.lastName }}</td>
+                <td>{{ deliverer.email }}</td>
+                <td>{{ deliverer.phoneNumber }}</td>
+                <td>
+                  <button class="btn btn-danger" (click)="deleteDeliverer(deliverer.id)">Delete</button>
+                  <button class="btn btn-primary ml-5" (click)="updateDeliverer(deliverer.id)">Edit</button>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
