--- a/src/app/component/client/list-client/list-client.component.html
+++ b/src/app/component/client/list-client/list-client.component.html
@@ -1,25 +1,40 @@
-<div class="container">
-  <h2>List of Clients</h2>
-  <button class="btn btn-primary float-right" routerLink="/add-client">Add Client</button>
-  <table class="table">
-    <thead>
-    <tr>
-      <th>Id</th>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let client of clients">
-      <td>{{ client.id }}</td>
-      <td>{{ client.firstName }}</td>
-      <td>{{ client.email }}</td>
-      <td>
-        <button class="btn btn-danger" (click)="deleteUser(client.id)">Delete</button>
-        <button class="btn btn-primary" (click)="updateClient(client.id)">Edit</button>
-      </td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+<section class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-header">
+            <h2>List of Clients</h2>
+            <button class="btn btn-primary float-right" routerLink="/add-client">Clients List</button>
+          </div>
+          <div class="card-body">
+            <table class="table table-bordered table-striped">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Full Name</th>
+                  <th>Email</th>
+                  <th>Phone Number</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let client of clients">
+                  <td>{{ client.id }}</td>
+                  <td>{{ client.firstName }} {{ client.lastName }}</td>
+                  <td>{{ client.email }}</td>
+                  <td>{{ client.phoneNumber }}</td>
+                  <td>
+                    <button class="btn btn-danger" (click)="deleteUser(client.id)">Delete</button>
+                    <button class="btn btn-primary ml-5" (click)="updateClient(client.id)">Edit</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
