--- a/src/app/component/Admin/list-admin/list-admin.component.html
+++ b/src/app/component/Admin/list-admin/list-admin.component.html
@@ -22,7 +22,7 @@
               <tr *ngFor="let admin of admins">
                 <td>{{ admin.id }}</td>
                 <td>{{ admin.firstName }} {{ admin.lastName }}</td>
-                <td>{{ admin.email }}</td>
+                <td>{{ admin.username }}</td>
                 <td>{{ admin.phoneNumber }}</td>
                 <td>
                   <button class="btn btn-danger" (click)="deleteAdmin(admin.id)">Delete</button>
