--- a/src/app/component/Supplier/add-supplier/add-supplier.component.html
+++ b/src/app/component/Supplier/add-supplier/add-supplier.component.html
@@ -14,8 +14,8 @@
       <input type="text" class="form-control" id="phoneNumber" formControlName="phoneNumber">
     </div>
     <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="text" class="form-control" formControlName="email" id="email">
+      <label for="username">Email:</label>
+      <input type="text" class="form-control" formControlName="username" id="username">
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
