--- a/src/app/component/User/edit-user/edit-user.component.html
+++ b/src/app/component/User/edit-user/edit-user.component.html
@@ -14,8 +14,8 @@
       <input type="text" class="form-control" id="phoneNumber" formControlName="phoneNumber" name="phoneNumber" [(ngModel)]="user.phoneNumber">
     </div>
     <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="text" class="form-control" formControlName="email" id="email" [(ngModel)]="user.email">
+      <label for="username">Email:</label>
+      <input type="text" class="form-control" formControlName="username" id="username" [(ngModel)]="user.username">
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
