--- a/src/app/component/client/list-client/list-client.component.html
+++ b/src/app/component/client/list-client/list-client.component.html
@@ -5,7 +5,7 @@
         <div class="card">
           <div class="card-header">
             <h2>List of Clients</h2>
-            <button class="btn btn-primary float-right" routerLink="/add-client">Clients List</button>
+            <button class="btn btn-primary float-right" routerLink="/add-client">Add Client</button>
           </div>
           <div class="card-body">
             <table class="table table-bordered table-striped">
@@ -22,7 +22,7 @@
                 <tr *ngFor="let client of clients">
                   <td>{{ client.id }}</td>
                   <td>{{ client.firstName }} {{ client.lastName }}</td>
-                  <td>{{ client.email }}</td>
+                  <td>{{ client.username }}</td>
                   <td>{{ client.phoneNumber }}</td>
                   <td>
                     <button class="btn btn-danger" (click)="deleteUser(client.id)">Delete</button>
